fix BundleScanningMountPointProvider when using with PojoSR on paths with special characters
PAXWICKET-461